# wordle-rl-env

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_env.py
scripts/: perf_guardrail.py
tests/: test_wordle_env.py
wordle_rl/: __init__.py  env.py  lexicon.py  pygame_ui.py  registration.py  vector_env.py  wrappers.py
wordle_rl/data/: SOURCE.md
